Fix printing of plugins in absolutely positioned divs to use the right coordinates.  Bug 225832, r+sr=roc